--- a/frontend/src/components/layout.css
+++ b/frontend/src/components/layout.css
@@ -1,4 +1,20 @@
-.container {
-  padding: 5% auto;
-  background-color: gray;
+.layout {
+  min-width: 720px;
+  min-height: 90vh;
+  border-radius: 10px;
+  margin: 2rem 4rem;
+  background-color: black;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  min-height: calc(90vh - 100px);
+}
+
+@media (prefers-color-scheme: light) {
+  .layout {
+    background-color: rgb(201, 201, 201);
+  }
 }
