--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -1,6 +1,41 @@
-.latest-posts h2 {
-  color: #666;
-  border-bottom: 2px dashed #999;
-  padding-bottom: 10px;
-  margin-bottom: 15px;
+.latest-posts {
+  margin-top: 3rem;
+  color: #afafaf;
+}
+
+.signup {
+  color: rgb(252, 188, 12);
+  transition: transform 0.3s ease-in-out;
+}
+
+.signup:hover {
+  color: greenyellow;
+}
+
+.animals_area {
+  display: flex;
+  flex-direction: row;
+  width: 20%;
+  margin: 3rem auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.button_area {
+  margin-top: 3rem;
+}
+.button_area > a {
+  color: rgba(255, 255, 255, 0.87);
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.8em 1.5em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.button_area > a:hover {
+  border-color: #646cff;
 }
