--- a/frontend/src/pages/post.css
+++ b/frontend/src/pages/post.css
@@ -1,17 +1,42 @@
-.pixel-post-title {
-  color: #222;
-  font-size: 1.8em;
-  margin-bottom: 15px;
-  text-shadow: 2px 2px #444;
-}
-
 .post_detail {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.pixel-post-title {
+  color: #8e8e8e;
+  font-size: 2.5em;
+  margin-bottom: 15px;
+  text-shadow: 2px 2px #a9a9a9;
+}
+
+.post-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: end;
+  font-family: "Tagesschrift", system-ui;
+  font-size: 20px;
+}
+
+.post-info p {
+  margin: 0.5rem 0.5rem;
+}
+
+.post-info p a {
+  font-family: "Tagesschrift", system-ui;
+  font-size: 12px;
+  color: rgb(205, 205, 205);
+}
+
+.post-info p a:hover {
+  border-bottom: dotted 1px #646cff;
+  color: rgb(189, 189, 189);
+}
+
 .post-content {
   line-height: 1.6;
   white-space: pre-wrap; /* 保留換行和空格 */
+  flex-grow: 1;
 }
