--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,3 +102,12 @@ button:focus-visible {
     text-shadow: 2px 2px #555;
   }
 }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
