--- a/frontend/src/pages/user.css
+++ b/frontend/src/pages/user.css
@@ -2,15 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 720px;
+  margin: auto;
+  border: solid 1px;
+  border-radius: 10px;
 }
 
 .user-avatar {
-  margin-bottom: 10px;
-  border: 2px solid #777;
+  margin-top: 10px;
 }
 
 .pixel-user-title {
-  color: #555;
+  color: rgb(252, 188, 12);
   font-size: 1.6em;
   text-shadow: 1px 1px #888;
 }
