--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -31,3 +31,15 @@
   cursor: pointer;
   color: #535bf2;
 }
+
+.logout-block {
+  padding: 8px 12px;
+  border-radius: 5px;
+  margin-left: 2.5rem;
+  cursor: pointer;
+  border: dotted 2px transparent;
+}
+
+.logout-block:hover {
+  border: dotted 2px #535bf2;
+}
