--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -31,15 +31,22 @@
   cursor: pointer;
   color: #535bf2;
 }
-
-.logout-block {
-  padding: 8px 12px;
-  border-radius: 5px;
+.setting-container {
+  position: relative;
+  width: 50px;
+  height: 50px;
   margin-left: 2.5rem;
-  cursor: pointer;
-  border: dotted 2px transparent;
 }
 
-.logout-block:hover {
+.avatar-block {
+  width: inherit;
+  height: inherit;
+  padding: 1px;
+  border-radius: 9999px;
+  border: dotted 2px transparent;
+  cursor: pointer;
+}
+
+.avatar-block:hover {
   border: dotted 2px #535bf2;
 }
