--- a/frontend/src/components/my_post_card.css
+++ b/frontend/src/components/my_post_card.css
@@ -1,4 +1,5 @@
 .my-post-card {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,4 +17,44 @@
   font-family: "Tagesschrift", system-ui;
   font-size: 12px;
   color: rgb(205, 205, 205);
+}
+
+.my-post-card form {
+  position: fixed;
+  top: 10rem;
+  bottom: 4rem;
+  right: 10rem;
+  left: 10rem;
+  z-index: 1000;
+  border-radius: 10px;
+  background-color: rgb(42, 42, 42);
+  box-shadow: -0.3rem -0.2rem rgb(86, 86, 86);
+}
+
+.my-post-card textarea {
+  width: 630px;
+  resize: none;
+  font-size: x-large;
+}
+
+.my-post-card h4 {
+  font-family: "Tagesschrift", system-ui;
+  font-size: 1.5rem;
+  color: rgb(252, 188, 12);
+  margin-bottom: 0;
+}
+.mypost-edit-close {
+  display: flex;
+  justify-content: end;
+  margin-top: 0.5rem;
+  margin-right: 1.5rem;
+  cursor: pointer;
+}
+
+.mypost-buttons {
+  display: flex;
+  align-items: center;
+}
+.mypost-buttons > button {
+  margin-left: 0.5rem;
 }
