--- a/frontend/src/pages/my_posts.css
+++ b/frontend/src/pages/my_posts.css
@@ -3,3 +3,17 @@
   font-size: 2.5rem;
   color: rgb(252, 188, 12);
 }
+
+.posts-header {
+  position: fixed;
+  top: 10rem;
+  right: 6rem;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  z-index: 2000;
+}
+
+.posts-header > button {
+  background-color: rgb(53, 53, 53);
+}
